package preView;


import complexNumActivation.ComplexNumber;
import internalToDo.MethodOfCalculable;


public interface InterfaceNewCalculate {
    MethodOfCalculable create(ComplexNumber arg);
}
